# Waru

./: .env.example  .env.examples  .gitignore  README.md  init.sql  pyproject.toml  requirements.txt  vercel.json
backend/: main.py
backend/src/: main.py  main_fixed.py  models.py
backend/src/middleware/: auth.py
backend/src/utils/: db.py  scemas.py
frontend/src/templates/: index.html
frontend/src/templates/admin/: userlist.html
frontend/src/templates/admin/order/: manageorder.html
frontend/src/templates/admin/product/: add_product.html  main.html  update_product.html
frontend/src/templates/admin/set-alamat/: set-alamat.html
frontend/src/templates/auth/: auth.html
frontend/src/templates/user/: cart.html  checkout.html  dashboard.html  order.html  product_detail.html
