[project]
name = "waru"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "asyncpg",
    "bcrypt",
    "python-dotenv",
    "jinja2>=3.1.2",
    "python-multipart",
    "starlette>=0.27.0",
    "itsdangerous",
    "fastapi-asyncpg"
]

[tool.vercel]
entrypoint = "backend/src/main.py"